# projet_04_OC

./: main.ipynb  pyproject.toml  session_oc.txt
