[project]
name = "projet-04-oc"
version = "0.1.0"
description = ""
authors = [
    {name = "Christophe-Ringot",email = "christophe.ringot1996@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "shap (>=0.48.0,<0.49.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "imbalanced-learn (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

